{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 6,
  "lineage": "9eed7571-7d5f-03e4-31e0-2ad02fb7fb71",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_network",
      "name": "prueba",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "Terraform-managed.",
            "id": "projects/mygkeproject-381022/global/networks/dev-network",
            "name": "dev-network",
            "project": "mygkeproject-381022",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/global/networks/dev-network"
          }
        }
      ]
    },
    {
      "module": "module.gke_fw_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-11T02:55:51.498-07:00",
            "deny": [],
            "description": "Allow http to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mygkeproject-381022/global/firewalls/dev-network-ingress-tag-http",
            "log_config": [],
            "name": "dev-network-ingress-tag-http",
            "network": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/global/networks/dev-network",
            "priority": 1000,
            "project": "mygkeproject-381022",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/global/firewalls/dev-network-ingress-tag-http",
            "source_ranges": [
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.prueba"
          ]
        }
      ]
    },
    {
      "module": "module.gke_fw_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-11T02:55:51.513-07:00",
            "deny": [],
            "description": "Allow http to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mygkeproject-381022/global/firewalls/dev-network-ingress-tag-https",
            "log_config": [],
            "name": "dev-network-ingress-tag-https",
            "network": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/global/networks/dev-network",
            "priority": 1000,
            "project": "mygkeproject-381022",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/global/firewalls/dev-network-ingress-tag-https",
            "source_ranges": [
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.prueba"
          ]
        }
      ]
    },
    {
      "module": "module.gke_fw_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-11T02:57:40.270-07:00",
            "deny": [],
            "description": "Allow SSH to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mygkeproject-381022/global/firewalls/dev-network-ingress-tag-ssh",
            "log_config": [],
            "name": "dev-network-ingress-tag-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/global/networks/dev-network",
            "priority": 1000,
            "project": "mygkeproject-381022",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mygkeproject-381022/global/firewalls/dev-network-ingress-tag-ssh",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-default"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.prueba"
          ]
        }
      ]
    }
  ]
}